feat: allow referrer in links to own website

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -3,7 +3,7 @@
 ---
 
 <p>
-  Made by <a href="https://calvin.sh" target="_blank" rel="noopener noreferrer"
+  Made by <a href="https://calvin.sh" target="_blank" rel="noopener"
     >Calvin Liang</a
   > for his
   <a
